--- a/daw/static/daw/css/style_DAW.css
+++ b/daw/static/daw/css/style_DAW.css
@@ -2,8 +2,9 @@
 html{
   font-size: 15px;
 }
-boby{
+body{
   background-color: white;
+  margin: 0;
 }
 ul{
   padding: 0;
@@ -17,6 +18,7 @@ input{
   cursor: pointer;
 }
 .main{
+  position: relative;
   background-color: #aaa;
   width: 100%;
   height: 100%;
@@ -35,16 +37,16 @@ input{
   -ms-user-select: none; /* IE10かららしi */
 }
 
+
 /*Menubar*/
 .menu_bar{
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #ddd;
   width: 100%;
   height: 15%;
-  overflow: hidden;
+  overflow: visible;
   user-select: none;
   -moz-user-select: none; /* Firefox */
   -webkit-user-select: none; /* Safari、Chromeなど */
@@ -103,6 +105,7 @@ td.extime{
 
 /*saveボタン・ウィンドウ*/
 .save-button{
+  position: relative;
   margin: 0;
   padding-left: 20px;
 }
@@ -176,6 +179,7 @@ td.extime{
   text-align: center;
   cursor: pointer;
   border-radius: 10px;
+
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
@@ -206,14 +210,14 @@ td.extime{
   background-color: #CCCCCC;
   border-radius: 10px;
 }
-.saisei p{
+.saiseis{
   font-size: 20px;
   text-align: center;
   flex-grow: 1;
   margin: 0;
   padding: 10px;
 }
-.saisei p + p{
+.saiseis + .saiseis{
   border-left: 1px solid #666;
 }
 
@@ -314,6 +318,8 @@ label span{
   border-radius: 50%;
   color: #fff;
   text-align: center;
+  z-index: auto;
+
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
@@ -333,10 +339,11 @@ label span{
 }
 .inst_item_right .pan{
     margin: 8px 0;
+  z-index: auto;
 }
 .inst_item_right .volume{
     width: 80%;
-    margin: 8px 0;
+    margin: 8px auto;
 }
 .effect_list{
   margin: 0;
@@ -456,4 +463,77 @@ label span{
   color: white;
   text-align: center;
   margin: 0;
+}
+
+/*ヘルプ*/
+.trigger{
+  position: relative;
+}
+.callout{
+  position: absolute;
+  padding: 10px;
+  font-size: 12px;
+  line-height: 1.6em;
+  color: #fff;
+  border-radius: 5px;
+  background: #000;
+  width: 120px;
+  top: 110%;
+
+  z-index: 1;
+  }
+.callout:before{
+  content: "";
+  position: absolute;
+  top: -28px;
+  left: 50%;
+  border: 15px solid transparent;
+  border-top: 15px solid #000;
+  margin-left: -15px;
+  transform: rotateZ(180deg);
+}
+.save_callout{
+  display: none;
+}
+.help_callout{
+  display: none;
+}
+.back_callout{
+  display:none;
+}
+.saisei_callout{
+  display:none;
+}
+.bar_callout{
+    display:none;
+}
+.bpm_callout{
+    display:none;
+}
+.extime_callout{
+    display:none;
+}
+.key_callout{
+    display:none;
+}
+.exartist_callout{
+    display:none;
+}
+.scalebar_callout{
+  display:none;
+}
+.mute_callout{
+  display:none;
+  z-index: 2;
+}
+.pan_callout{
+  display:none;
+  font-size: 1em;
+}
+.volume_callout{
+  display:none;
+  font-size: 1em;
+}
+.effect_callout{
+  display:none;
 }
