--- a/daw/templates/daw/DAW.html
+++ b/daw/templates/daw/DAW.html
@@ -1,13 +1,17 @@
 {% load static %}
 
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>Deeparture</title>
-    <!--CSSはstyle_DAW.cssに集約-->
-    <link rel="stylesheet" type="text/css" href="{% static 'daw/css/style_DAW.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <title>Deeparture</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <!--チュートリアル-->
+  <link rel="stylesheet" href="{% static 'daw/css/tutorial/highlight.js.css' %}">
+  <link rel="stylesheet" href="{% static 'daw/css/tutorial/swiper.min.css' %}">
+  <link rel="stylesheet" href="{% static 'daw/css/tutorial/style.css' %}">
+  <!--CSSはstyle_DAW.cssに集約-->
+  <link rel="stylesheet" type="text/css" href="{% static 'daw/css/style_DAW.css' %}">
 
     <!--jsは各ファイルに分ける 基本的に各部品ごとに名称をつける ex seekbar.js-->
     <!--共用部分(jqueryなど)-->
@@ -15,6 +19,7 @@
     <!--グローバル変数-->
     <script type="text/javascript">
       var play_flg = 0;
+      var help_flg = false;
       var MIDI_Melody = [];
       var chord_stroke = {};
       var drum_pattern = {};
@@ -57,65 +62,99 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <script type="text/javascript" src="{% static 'daw/js/instbar.js' %}"></script>
       <script src="{% static 'daw/js/input-knobs.js' %}"></script>
+      <script src="{% static 'daw/js/DAW_help.js' %}"></script>
       <!--以下MIDIinput-->
       <script src="{% static 'daw/js/rhythm_pattern.js' %}"></script>
       <script type="text/javascript" src="{% static 'daw/js/MIDIinput.js' %}"></script>
       <script src="{% static 'daw/js/tone.js' %}"></script>
+      <!--以下チュートリアル-->
+    <script src="{% static 'daw/js/tutorial/highlight.js' %}"></script>
+    <script src="{% static 'daw/js/tutorial/highlightjs-line-numbers.min.js' %}"></script>
+    <script src="{% static 'daw/js/tutorial/swiper.min.js' %}"></script>
+    <script src="{% static 'daw/js/tutorial/script.js' %}"></script>
   </head>
-  <boby>
+  <body>
     <div class="main">
+      <!--チュートリアル-->
+      <div class="l-wrapper">
+        <div class="c-container">
+          <p class="tutorial_close-btn"><i class="fas fa-times fa-2x"></i></p>
+          <div class="sample sample01">
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="{% static 'daw/images/Menubar.png' %}"></div>
+                <div class="swiper-slide"><img src="{% static 'daw/images/DAWmain.png' %}"></div>
+              </div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--メニューバー-->
       <div class="menu_bar">
         <!--左-->
-        <div class="save-button">
+        <div class="save-button trigger">
           <p id="save"><i class="far fa-save fa-fw"></i></p>
+          <div class="save_callout callout"><p class="callout_text">このボタンをクリックすることで、楽曲データを保存することができます。</p></div>
         </div>
 
-        <div class="help-button">
+        <div class="help-button trigger">
           <p id="help"><i class="far fa-question-circle fa-fw"></i></p>
+          <div class="help_callout callout"><p class="callout_text">チュートリアル・ヘルプを表示します。</p></div>
         </div>
-        <div class="back-button">
-          <p id="back"><i class="fas fa-directions"></i></p>
+        <div class="back-button trigger">
+          <p id="back"><i class="fas fa-directions fa-fw"></i></p>
+          <div class="back_callout callout"><p class="callout_text">プロジェクト選択画面に戻ります。</p></div>
         </div>
 
         <!--真ん中-->
-        <div class="saisei">
-          <p id ="backward"><i class="fas fa-fast-backward"></i></p>
-          <p id ="play">
+        <div class="saisei trigger">
+          <p id ="backward" class="saiseis"><i class="fas fa-fast-backward"></i></p>
+          <p id ="play" class="saiseis">
             <span class="play-btn"><i class="fas fa-play"></i></span>
             <span class="stop-btn"><i class="far fa-square"></i></span>
           </p>
+          <div class="saisei_callout callout"><p class="callout_text">左のボタンで再生位置を最初に戻す、右のボタンで楽曲を再生することができます。</p></div>
         </div>
 
         <!--右-->
         <div class="select">
           <table cellpadding="0" cellspacing="1" align="right">
             <tr>
-              <td class="exbar">
+              <td class="exbar trigger">
                 <p class="gr"></p>
                 <p class="wh">bar</p>
+                <div class="bar_callout callout"><p class="callout_text">現在の小節:拍:拍内小拍が表示されます。</p></div>
               </td>
-              <td>
+              <td class="exbpm trigger">
                 <p class="gr bpm_value"></p>
                 <input class="bpm_slider" type="range" value="120" max="240" min="40" autocomplete="off">
                 <p class="wh">bpm</p>
+                <div class="bpm_callout callout"><p class="callout_text">現在の楽曲のBPM(楽曲の速さ)が表示されます。クリックしたまま左右にドラッグすることで、BPMの変更が可能です。</p></div>
               </td>
-              <td class="extime">
+              <td class="extime trigger">
                 <p class="gr"></p>
                 <p class="wh">time</p>
+                <div class="extime_callout callout"><p class="callout_text">現在の経過時間が表示されます。</p></div>
               </td>
-              <td>
+              <td class="exkey trigger">
                 <p class="gr key"></p>
                 <p class="wh">key</p>
+                <div class="key_callout callout"><p class="callout_text">現在の楽曲のキーが表示されます。</p></div>
               </td>
-              <td class="exartist">
+              <td class="exartist trigger">
                 <p class="gr artist"></p>
                 <p class="wh">artist</p>
+                <div class="exartist_callout callout"><p class="callout_text">現在の楽曲のアーティストが表示されます。</p></div>
               </td>
             </tr>
           </table>
         </div>
         <!--スケールバー-->
-        <div class="scale_bar">
+        <div class="scale_bar trigger">
           <label class="width_scale">
             <span>width_scale</span>
             <input type="range" class="width_scale_bar" min="50" max="150" autocomplete="off">
@@ -124,51 +163,74 @@
             <span>height_scale</span>
             <input type="range" class="height_scale_bar" min="50" max="150" autocomplete="off">
           </label>
+          <div class="scalebar_callout callout"><p class="callout_text">左右にドラッグすることで、打ち込み画面の幅を変更できます。</p></div>
         </div>
       </div>
+
       <div class="DAW_main">
         <section class="inst_bar">
           <div class="inst_item">
             <div class="inst_item_left">
                 <p>Melody</p>
-                <a class="mute" href="#">
-                    <span><i class="fas fa-volume-up"></i></span>
-                    <span><i class="fas fa-volume-mute"></i></span>
-                </a>
+                <div class="mute trigger">
+                  <span><i class="fas fa-volume-up"></i></span>
+                  <span><i class="fas fa-volume-mute"></i></span>
+                  <div class="mute_callout callout"><p class="callout_text">ボタンをクリックすることで、そのパートをミュート状態に切り替えることができます。</p></div>
+                </div>
             </div>
             <div class="inst_item_right">
-                <div>
-                    <p>L</p>
-                    <input type="range" class="input-knob pan" autocomplete="off">
-                    <p>R</p>
-                </div>
+              <div class="trigger">
+                <p>L</p>
+                <input type="range" class="input-knob pan" autocomplete="off" value="0" min="-1" max="1"step="0.01">
+                <p>R</p>
+                <div class="pan_callout callout"><p class="callout_text">左右にドラッグすることで、そのパートのパン(音の出る方向)を調整できます。</p></div>
+              </div>
+              <div class="volume_container trigger">
                 <input type="range" class="volume" value="0" min="-15" max="15" autocomplete="off">
+                <div class="volume_callout callout"><p class="callout_text">左右にドラッグすることで、そのパートのボリュームを変更できます。</p></div>
+              </div>
             </div>
             <div class="inst_item_bottom">
-              <details>
+              <details class="trigger">
                 <summary>エフェクト</summary>
                 <ul class="effect_list">
-                  <li class="effect_reverb">リバーブ</li>
-                  <li class="effect_chorus">コーラス</li>
-                  <li class="effect_distortion">ディストーション</li>
-                  <li class="effect_deley">ディレイ</li>
-                  <li class="effect_autowah">ワウ</li>
+                  <li class="effect_reverb trigger">
+                    リバーブ
+                    <div class="reverb_callout callout"><p class="callout_text">残響音を生み出すエフェクトです。</p></div>
+                  </li>
+                  <li class="effect_chorus trigger">
+                    コーラス
+                    <div class="chorus_callout callout"><p class="callout_text">複数の音のように聴こえる加工をするエフェクトです。</p></div>
+                  </li>
+                  <li class="effect_distortion trigger">
+                    ディストーション
+                    <div class="distortion_callout callout"><p class="callout_text">音を歪ませる(大きくする)エフェクトです。</p></div>
+                  </li>
+                  <li class="effect_delay trigger">
+                    ディレイ
+                    <div class="delay_callout callout"><p class="callout_text">山びこのような残響音を生み出すエフェクトです。</p></div>
+                  </li>
+                  <li class="effect_autowah trigger">
+                    ワウ
+                    <div class="autowah_callout callout"><p class="callout_text">「ワウワウ」と聴こえるような音を作り出すエフェクトです。</p></div>
+                  </li>
                 </ul>
+                <div class="effect_callout callout"><p class="callout_text">クリックすることで、音色を加工できるエフェクトのリストを表示します。<br>各エフェクトはクリックすることで、オン/オフを切り替えることができます。</p></div>
               </details>
             </div>
         </div>
         <div class="inst_item">
             <div class="inst_item_left">
                 <p>Chord</p>
-                <a class="mute" href="#">
-                    <span><i class="fas fa-volume-up"></i></span>
-                    <span><i class="fas fa-volume-mute"></i></span>
-                </a>
+                <div class="mute">
+                  <span><i class="fas fa-volume-up"></i></span>
+                  <span><i class="fas fa-volume-mute"></i></span>
+                </div>
             </div>
             <div class="inst_item_right">
                 <div>
                     <p>L</p>
-                    <input type="range" class="input-knob pan" autocomplete="off">
+                    <input type="range" class="input-knob pan" autocomplete="off" value="0" min="-1" max="1"step="0.01">
                     <p>R</p>
                 </div>
                 <input type="range" class="volume" value="0" min="-15" max="15" autocomplete="off">
@@ -180,7 +242,7 @@
                   <li class="effect_reverb">リバーブ</li>
                   <li class="effect_chorus">コーラス</li>
                   <li class="effect_distortion">ディストーション</li>
-                  <li class="effect_deley">ディレイ</li>
+                  <li class="effect_delay">ディレイ</li>
                   <li class="effect_autowah">ワウ</li>
                 </ul>
               </details>
@@ -189,16 +251,16 @@
         <div class="inst_item">
             <div class="inst_item_left">
                 <p>Bass</p>
-                <a class="mute" href="#">
-                    <span><i class="fas fa-volume-up"></i></span>
-                    <span><i class="fas fa-volume-mute"></i></span>
-                </a>
+                <div class="mute">
+                  <span><i class="fas fa-volume-up"></i></span>
+                  <span><i class="fas fa-volume-mute"></i></span>
+                </div>
             </div>
             <div class="inst_item_right">
                 <div>
-                    <p>L</p>
-                    <input type="range" class="input-knob pan" autocomplete="off">
-                    <p>R</p>
+                  <p>L</p>
+                  <input type="range" class="input-knob pan" autocomplete="off" value="0" min="-1" max="1"step="0.01">
+                  <p>R</p>
                 </div>
                 <input type="range" class="volume" value="0" min="-15" max="15" autocomplete="off">
             </div>
@@ -209,7 +271,7 @@
                   <li class="effect_reverb">リバーブ</li>
                   <li class="effect_chorus">コーラス</li>
                   <li class="effect_distortion">ディストーション</li>
-                  <li class="effect_deley">ディレイ</li>
+                  <li class="effect_delay">ディレイ</li>
                   <li class="effect_autowah">ワウ</li>
                 </ul>
               </details>
@@ -218,16 +280,16 @@
         <div class="inst_item">
             <div class="inst_item_left">
                 <p>Drum</p>
-                <a class="mute" href="#">
-                    <span><i class="fas fa-volume-up"></i></span>
-                    <span><i class="fas fa-volume-mute"></i></span>
-                </a>
+                <div class="mute">
+                  <span><i class="fas fa-volume-up"></i></span>
+                  <span><i class="fas fa-volume-mute"></i></span>
+                </div>
             </div>
             <div class="inst_item_right">
                 <div>
-                    <p>L</p>
-                    <input type="range" class="input-knob pan" autocomplete="off">
-                    <p>R</p>
+                  <p>L</p>
+                  <input type="range" class="input-knob pan" autocomplete="off" value="0" min="-1" max="1"step="0.01">
+                  <p>R</p>
                 </div>
                 <input type="range" class="volume" value="0" min="-15" max="15" autocomplete="off">
             </div>
@@ -238,7 +300,7 @@
                   <li class="effect_reverb">リバーブ</li>
                   <li class="effect_chorus">コーラス</li>
                   <li class="effect_distortion">ディストーション</li>
-                  <li class="effect_deley">ディレイ</li>
+                  <li class="effect_delay">ディレイ</li>
                   <li class="effect_autowah">ワウ</li>
                 </ul>
               </details>
