--- a/daw/templates/daw/DAW.html
+++ b/daw/templates/daw/DAW.html
@@ -76,7 +76,7 @@
   <body>
     <div class="main">
       <!--チュートリアル-->
-      <div class="l-wrapper">
+      <!-- <div class="l-wrapper">
         <div class="c-container">
           <p class="tutorial_close-btn"><i class="fas fa-times fa-2x"></i></p>
           <div class="sample sample01">
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--メニューバー-->
       <div class="menu_bar">
