キーボードショートカットの追加

--- a/daw/templates/daw/DAW.html
+++ b/daw/templates/daw/DAW.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!--グローバル変数-->
     <script type="text/javascript">
-      var play_flg = 0;
+      var play_flg = false;
       var help_flg = false;
       var MIDI_Melody = [];
       var chord_stroke = {};
@@ -76,7 +76,7 @@
   <body>
     <div class="main">
       <!--チュートリアル-->
-      <!-- <div class="l-wrapper">
+      <div class="l-wrapper">
         <div class="c-container">
           <p class="tutorial_close-btn"><i class="fas fa-times fa-2x"></i></p>
           <div class="sample sample01">
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!--メニューバー-->
       <div class="menu_bar">
