--- a/daw/static/daw/css/style_DAW.css
+++ b/daw/static/daw/css/style_DAW.css
@@ -65,7 +65,6 @@ table td {
 }
 td.exartist{
   width:230px;
-  height:70px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -75,8 +74,7 @@ td.exbar{
   border-bottom-left-radius: 10px;
 }
 td.extime{
-  width:170px;
-  height:70px;
+  width:120px;
 }
 .bpm_slider{
   position: absolute;
@@ -93,6 +91,7 @@ td.extime{
   color: #59DE64;
   white-space: nowrap;
   -ms-overflow-style:none;
+  scrollbar-width: none;
 }
 .gr::-webkit-scrollbar{
   display:none;
@@ -259,18 +258,22 @@ label span{
   overflow-y: auto;
   width: 20%;
   height: 100%;
+  scrollbar-width: none;
 }
 .inst_bar::-webkit-scrollbar{
   display: none;
 }
 .inst_bar p{
-    margin: 0;
+  margin: 0;
 }
 .inst_item{
   display: flex;
   flex-wrap: wrap;
   background-color: white;
   border: 1px solid #222;
+}
+.inst_item:first-of-type{
+  border: 3px solid rgba(255, 20, 147, 0.8);
 }
 .inst_item > div{
   border-radius: 2px;
@@ -340,12 +343,20 @@ label span{
     display: inline;
 }
 .inst_item_right .pan{
-    margin: 8px 0;
+  margin: 8px 0;
   z-index: auto;
 }
 .inst_item_right .volume{
-    width: 80%;
+    width: 70%;
     margin: 8px auto;
+}
+.volume_container > div{
+  display: flex;
+  flex-flow: nowrap;
+  align-items: center;
+}
+.vol_mark{
+  padding: 5px;
 }
 .effect_list{
   margin: 0;
@@ -386,6 +397,7 @@ label span{
   width: 87.5%;
   height: 5%;
   overflow: scroll;
+  scrollbar-width: none;
 }
 .Measure_grid::-webkit-scrollbar{
   display:none;
@@ -402,6 +414,7 @@ label span{
   width: 100px;
   height: 100%;
   overflow: scroll;
+  scrollbar-width: none;
 }
 .Mscale_grid::-webkit-scrollbar{
   display:none;
@@ -487,6 +500,7 @@ label span{
   background: #000;
   width: 120px;
   top: 110%;
+  text-align: center;
 
   z-index: 1;
   }
@@ -544,4 +558,15 @@ label span{
 }
 .effect_callout{
   display:none;
+}
+.callout_text{
+  text-align: left;
+}
+.shortcut_text{
+  font-weight: bolder;
+  padding-top: 2px;
+}
+.shortcut_text:before{
+  content: "\A";
+  white-space: pre;
 }
