--- a/daw/static/daw/css/style_start.css
+++ b/daw/static/daw/css/style_start.css
@@ -257,3 +257,40 @@ h2{
 .demo_stop-btn{
   display: none;
 }
+
+/*ユーザ*/
+.user_prof{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/user_icon.png);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  top: 0;
+  right: 0;
+  margin: 15px 30px 15px 15px;
+  border: 1px solid #333;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.user_window{
+  display: none;
+  position:absolute;
+  top: 80px;
+  right: 15px;
+  height: 90px;
+  background-color: #fefefe;
+  border: 1px solid #333;
+  text-align: center;
+}
+.user_name{
+  color: deeppink;
+  margin: 1rem;
+}
+.logout-btn{
+  cursor: pointer;
+}
+.logout-btn:hover{
+  color: skyblue;
+}
