チュートリアル更新、ワウの調整、その他バグ修正

--- a/daw/templates/daw/DAW.html
+++ b/daw/templates/daw/DAW.html
@@ -100,6 +100,7 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="{% static 'daw/images/Menubar.png' %}"></div>
                 <div class="swiper-slide"><img src="{% static 'daw/images/DAWmain.png' %}"></div>
+                <div class="swiper-slide"><img src="{% static 'daw/images/shortcut.png' %}"></div>
               </div>
               <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
