--- a/daw/templates/daw/start.html
+++ b/daw/templates/daw/start.html
@@ -48,7 +48,7 @@
                 <div class="swiper-slide"><img src="{% static 'daw/images/Beat.png' %}"></div>
                 <div class="swiper-slide"><img src="{% static 'daw/images/BPM.png' %}"></div>
                 <div class="swiper-slide"><img src="{% static 'daw/images/melody.png' %}"></div>
-                <!--<div class="swiper-slide"><img src="{% static 'daw/images/melody.png' %}"></div>-->
+                <div class="swiper-slide"><img src="{% static 'daw/images/Musicword.png' %}"></div>
               </div>
               <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
@@ -113,7 +113,7 @@
               </div>
           </div>
           <div class="start_page">
-            <h2>Select Fav Beat</h2>
+            <h2>Select Fav Rhythm Pattern</h2>
             <div class="Select_beat">
               <p class="beats_item">A</p>
               <p class="beats_item">B</p>
